--- a/.gitignore
+++ b/.gitignore
@@ -96,9 +96,13 @@ fabric.properties
 ### PhpStorm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
-# modules.xml
-# .idea/misc.xml
-# *.ipr
+*.iml
+modules.xml
+.idea/misc.xml
+*.ipr
+
+### SASS Auto-Compiled files ###
+
+*.min.css
 
 # End of https://www.gitignore.io/api/phpstorm
