--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+src/.idea/workspace.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 
